# LO52_A2020

./: .gitignore  .gitmodules  README.md  Rapport TP AGOTSI Gedeon.docx  Rapport-TP_Robitaille_Jarno.docx  RapportProjet.docx  demo.mkv  nohup.out  ~$pport TP AGOTSI Gedeon.docx
CourseCODEP25/: settings.gradle
F1Levier/: gradle.properties  settings.gradle
LO52_F1/: settings.gradle
LO52_F1_Levier/: Présentation.odp  README.md  local.properties  settings.gradle
Projet/: CONTRIBUTING.MD  Projet LO52 – CODEP25 - Nicolas Garnier.pptx  README.MD  README.md  [LO52]Soutenance_Robitaille_Jarno.pptx  note projet 3 BDD.txt  settings.gradle
Projet-LO52/: settings.gradle
ProjetAppliF1/: settings.gradle
TP1/: Rapport TP1.docx  Rapport-TP_Robitaille_Jarno.docx  TP1.txt  (+1 more)
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/: CMakeLists.txt  build.gradle
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/androidTest/java/com/utbm/marie/ndktp4_Marie/: ExampleInstrumentedTest.kt
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/: AndroidManifest.xml
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/cpp/: native-lib.cpp
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/java/com/utbm/marie/ndktp4_Marie/: MainActivity.kt
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/res/layout/: activity_main.xml
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/res/values/: strings.xml  themes.xml
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/main/res/values-night/: themes.xml
TP4/NdkTp4_Marie_Muhamed/NdkTp4_Marie/app/src/test/java/com/utbm/marie/ndktp4_Marie/: ExampleUnitTest.kt
(+1280 files in other folders)
